extra padding on contact section fixed

--- a/src/sass/containers/_contact.scss
+++ b/src/sass/containers/_contact.scss
@@ -2,7 +2,7 @@
 	text-align: center;
 	max-width: 1200px;
 	margin: 0 auto;
-	padding: 6.4rem;
+	padding: 6.4rem 0;
 	display: flex;
 	gap: 5rem;
 
